Fixed tags flex stretch

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,7 @@ body {
   padding: 16px;
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   gap: 16px;
 }
 
